--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(CMAKE_C_STANDARD 17)
+set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 
 set(SHADERC_SKIP_TESTS ON)
@@ -80,12 +80,13 @@ add_executable(ps
     ./ps/src/ps_vulkan_swapchain.c
     ./ps/src/ps_vulkan_renderer.c
     ./ps/src/ps_vulkan_presentation.c
+    ./ps/src/ps_vulkan_scene.c
     ./ps/src/ps_vulkan_framebuffer.c
+    ./ps/src/ps_vulkan_image.c
     ./ps/src/ps_shader_compiler.c
     ./ps/src/ps_utils.c
     ./ps/src/ps_shader.c
     ./ps/src/ps_shader_source.c
-    ./ps/src/ps_vulkan_scene.c
     ./ps/src/ps_third_party_impls.c
 )
 target_link_libraries(ps
