--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ add_executable(ps
     ./ps/src/ps_vulkan_presentation.c
     ./ps/src/ps_vulkan_framebuffer.c
     ./ps/src/ps_vulkan_image.c
+    ./ps/src/ps_vulkan_buffer.c
     ./ps/src/ps_shader_compiler.c
     ./ps/src/ps_utils.c
     ./ps/src/ps_shader.c
