refactor: major state cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,7 @@ add_executable(ps
     ./ps/src/ps_shader.c
     ./ps/src/ps_input.c
     ./ps/src/ps_third_party_impls.c
+    ./ps/src/ps_pipeline_utils.c
 
     ./ps/src/scenes/ps_scenes.c
     ./ps/src/scenes/ps_scenes_splash.c
