--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,7 @@ add_executable(ps
     ./ps/src/ps_input.c
     ./ps/src/ps_third_party_impls.c
     ./ps/src/ps_pipeline_utils.c
+    ./ps/src/ps_font_renderer.c
 
     ./ps/src/scenes/ps_scenes.c
     ./ps/src/scenes/ps_scenes_splash.c
