--- a/avd/CMakeLists.txt
+++ b/avd/CMakeLists.txt
@@ -29,6 +29,8 @@ add_executable(avd
     ./src/vulkan/avd_vulkan_framebuffer.c
     ./src/vulkan/avd_vulkan_image.c
     ./src/vulkan/avd_vulkan_buffer.c
+    
+    ./src/ui/avd_ui.c
 
     ./src/scenes/avd_scenes.c
     ./src/scenes/avd_scenes_main_menu.c
