--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "dep/cgltf"]
 	path = dep/cgltf
 	url = https://github.com/jkuhlmann/cgltf.git
+[submodule "dep/volk"]
+	path = dep/volk
+	url = https://github.com/zeux/volk.git
