feat: setup 2d radiance cascades scene

--- a/avd/CMakeLists.txt
+++ b/avd/CMakeLists.txt
@@ -35,6 +35,7 @@ add_executable(avd
     ./src/scenes/avd_scenes.c
     ./src/scenes/avd_scenes_main_menu.c
     ./src/scenes/bloom/avd_scenes_bloom.c
+    ./src/scenes/2d_radiance_cascades/avd_scenes_2d_radiance_cascades.c
 )
 
 include_directories(avd
