fix: math lib bugs

--- a/avd/CMakeLists.txt
+++ b/avd/CMakeLists.txt
@@ -33,6 +33,8 @@ add_executable(avd
     ./src/ui/avd_ui.c
 
     ./src/math/avd_matrix_non_simd.c
+    ./src/math/avd_3d_matrices.c
+    ./src/math/avd_math_tests.c
 
     ./src/scenes/avd_scenes.c
     ./src/scenes/avd_scenes_main_menu.c
