--- a/avd/CMakeLists.txt
+++ b/avd/CMakeLists.txt
@@ -45,6 +45,7 @@ add_executable(avd
     ./src/scenes/bloom/avd_scenes_bloom.c
     ./src/scenes/2d_radiance_cascades/avd_scenes_2d_radiance_cascades.c
     ./src/scenes/deccer_cubes/avd_scenes_deccer_cubes.c
+    ./src/scenes/subsurface_scattering/avd_scenes_subsurface_scattering.c
 )
 
 include_directories(avd
