--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,6 @@
 [submodule "dep/volk"]
 	path = dep/volk
 	url = https://github.com/zeux/volk.git
-[submodule "dep/tineyobjloader-c"]
-	path = dep/tineyobjloader-c
+[submodule "dep/tinyobjloader-c"]
+	path = dep/tinyobjloader-c
 	url = https://github.com/syoyo/tinyobjloader-c
