feat: rename bloom folder to common

--- a/avd/CMakeLists.txt
+++ b/avd/CMakeLists.txt
@@ -18,7 +18,7 @@ add_executable(avd
     
     ./src/font/avd_font_renderer.c
     
-    ./src/bloom/avd_bloom.c
+    ./src/common/avd_bloom.c
 
     ./src/shader/avd_shader_compiler.c
     ./src/shader/avd_shader.c
