chore: setup eyeballs scene

--- a/avd/CMakeLists.txt
+++ b/avd/CMakeLists.txt
@@ -49,6 +49,7 @@ add_executable(avd
     ./src/scenes/2d_radiance_cascades/avd_scenes_2d_radiance_cascades.c
     ./src/scenes/deccer_cubes/avd_scenes_deccer_cubes.c
     ./src/scenes/subsurface_scattering/avd_scenes_subsurface_scattering.c
+    ./src/scenes/eyeballs/avd_scenes_eyeballs.c
 )
 
 include_directories(avd
