--- a/avd/CMakeLists.txt
+++ b/avd/CMakeLists.txt
@@ -54,6 +54,7 @@ add_executable(avd
     ./src/scenes/deccer_cubes/avd_scenes_deccer_cubes.c
     ./src/scenes/subsurface_scattering/avd_scenes_subsurface_scattering.c
     ./src/scenes/eyeballs/avd_scenes_eyeballs.c
+    ./src/scenes/realistic_head/avd_scenes_realistic_head.c
 )
 
 include_directories(avd
