feat: setup base for GLTF loading support for 3D scenes and models

--- a/avd/CMakeLists.txt
+++ b/avd/CMakeLists.txt
@@ -45,6 +45,7 @@ add_executable(avd
     ./src/model/avd_model.c
     ./src/model/avd_3d_scene.c
     ./src/model/avd_model_obj_loader.c
+    ./src/model/avd_model_gltf_loader.c
     ./src/model/avd_meshgen.c
 
     ./src/scenes/avd_scenes.c
