feat: implement hash table data structure with basic operations and tests

--- a/avd/CMakeLists.txt
+++ b/avd/CMakeLists.txt
@@ -12,6 +12,8 @@ add_executable(avd
     ./src/core/avd_window_cb.c
     ./src/core/avd_list.c
     ./src/core/avd_list_tests.c
+    ./src/core/avd_hashtable.c
+    ./src/core/avd_hashtable_tests.c
     ./src/core/avd_input.c
 
     ./src/avd_main.c
