--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,44 +12,46 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 set(SHADERC_SKIP_TESTS ON)
 
 # Use FindVulkan module added with CMAKE 3.7
 if(NOT CMAKE_VERSION VERSION_LESS 3.7.0)
-    message(STATUS "Using module to find Vulkan")
-    find_package(Vulkan)
+  message(STATUS "Using module to find Vulkan")
+  find_package(Vulkan)
 endif()
 
 IF(UNIX AND NOT APPLE)
-    set(LINUX TRUE)
+  set(LINUX TRUE)
 ENDIF()
 
 IF(WIN32)
-    IF(NOT Vulkan_FOUND)
-        find_library(Vulkan_LIBRARY NAMES vulkan-1 vulkan PATHS ${CMAKE_SOURCE_DIR}/libs/vulkan)
+  IF(NOT Vulkan_FOUND)
+    find_library(Vulkan_LIBRARY NAMES vulkan-1 vulkan PATHS ${CMAKE_SOURCE_DIR}/libs/vulkan)
 
-        IF(Vulkan_LIBRARY)
-            set(Vulkan_FOUND ON)
-            MESSAGE("Using bundled Vulkan library version")
-        ENDIF()
+    IF(Vulkan_LIBRARY)
+      set(Vulkan_FOUND ON)
+      MESSAGE("Using bundled Vulkan library version")
     ENDIF()
+  ENDIF()
 
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_WIN32_KHR")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_WIN32_KHR")
 ELSEIF(LINUX)
-    IF(NOT Vulkan_FOUND)
-        find_library(Vulkan_LIBRARY NAMES vulkan HINTS "$ENV{VULKAN_SDK}/lib" "${CMAKE_SOURCE_DIR}/libs/vulkan" REQUIRED)
+  IF(NOT Vulkan_FOUND)
+    find_library(Vulkan_LIBRARY NAMES vulkan HINTS "$ENV{VULKAN_SDK}/lib" "${CMAKE_SOURCE_DIR}/libs/vulkan" REQUIRED)
 
-        IF(Vulkan_LIBRARY)
-            set(Vulkan_FOUND ON)
-            MESSAGE("Using bundled Vulkan library version")
-        ENDIF()
+    IF(Vulkan_LIBRARY)
+      set(Vulkan_FOUND ON)
+      MESSAGE("Using bundled Vulkan library version")
     ENDIF()
+  ENDIF()
 ENDIF()
 
 IF(NOT Vulkan_FOUND)
-    message(FATAL_ERROR "Could not find Vulkan library!")
+  message(FATAL_ERROR "Could not find Vulkan library!")
 ELSE()
-    message(STATUS ${Vulkan_LIBRARY})
+  message(STATUS ${Vulkan_LIBRARY})
 ENDIF()
 
 
@@ -79,11 +81,11 @@ add_custom_target(generate_assets ALL DEPENDS ${ASSETS_TIMESTAMP_FILE})
 
 
 if (WIN32)
-    set(VOLK_STATIC_DEFINES VK_USE_PLATFORM_WIN32_KHR)
+  set(VOLK_STATIC_DEFINES VK_USE_PLATFORM_WIN32_KHR)
 elseif (APPLE)
-    set(VOLK_STATIC_DEFINES VK_USE_PLATFORM_MACOS_MVK)
+  set(VOLK_STATIC_DEFINES VK_USE_PLATFORM_MACOS_MVK)
 else()
-    set(VOLK_STATIC_DEFINES VK_USE_PLATFORM_XLIB_KHR)
+  set(VOLK_STATIC_DEFINES VK_USE_PLATFORM_XLIB_KHR)
 endif()
 
 add_subdirectory(dep/glfw)
@@ -92,14 +94,14 @@ add_subdirectory(avd_assets)
 add_subdirectory(avd)
 
 if (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 19.12.25835)
-    set(CMAKE_CXX20_STANDARD_COMPILE_OPTION "-std:c++latest")
-    set(CMAKE_CXX20_EXTENSION_COMPILE_OPTION "-std:c++latest")
+  set(CMAKE_CXX20_STANDARD_COMPILE_OPTION "-std:c++latest")
+  set(CMAKE_CXX20_EXTENSION_COMPILE_OPTION "-std:c++latest")
 endif()
 
 if( MSVC )
-    if(${CMAKE_VERSION} VERSION_LESS "3.6.0")
-        message( "\n\t[ WARNING ]\n\n\tCMake version lower than 3.6.\n\n\t - Please update CMake and rerun; OR\n\t - Manually set 'GLFW-CMake-starter' as StartUp Project in Visual Studio.\n" )
-    else()
-        set_property( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT avd )
-    endif()
+  if(${CMAKE_VERSION} VERSION_LESS "3.6.0")
+    message( "\n\t[ WARNING ]\n\n\tCMake version lower than 3.6.\n\n\t - Please update CMake and rerun; OR\n\t - Manually set 'GLFW-CMake-starter' as StartUp Project in Visual Studio.\n" )
+  else()
+    set_property( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT avd )
+  endif()
 endif()
