feat: add curl utility functions for downloading content

--- a/avd/CMakeLists.txt
+++ b/avd/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_executable(avd
     ${avd_headers}
     ./src/core/avd_utils.c
+    ./src/core/avd_utils_curl.c
     ./src/core/avd_window.c
     ./src/core/avd_window_cb.c
     ./src/core/avd_list.c
