--- a/avd/CMakeLists.txt
+++ b/avd/CMakeLists.txt
@@ -134,6 +134,7 @@ target_compile_definitions(avd PRIVATE
     $<$<CONFIG:Debug>:AVD_DEBUG>          # Define AVD_DEBUG for Debug builds
     $<$<NOT:$<CONFIG:Debug>>:AVD_RELEASE> # Define AVD_RELEASE for non-Debug builds
 )
+target_compile_definitions(avd PRIVATE AL_LIBTYPE_STATIC)
 
 
 if (MSVC OR CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "MSVC")
