--- a/avd/CMakeLists.txt
+++ b/avd/CMakeLists.txt
@@ -100,7 +100,7 @@ include_directories(avd
     ../dep/cute_headers
     ../dep/volk
     ../dep/tinyobjloader-c
-    ../dep/openal-soft/include
+    ../dep/portaudio/include
     ../avd_assets/generated/include
     ${Vulkan_INCLUDE_DIRS}
 )
@@ -122,7 +122,7 @@ target_link_libraries(avd
     avd_assets
     glfw
     volk
-    OpenAL
+    portaudio
     debug ${VULKAN_SDK_PATH}/Lib/shaderc_combinedd.lib
     optimized ${VULKAN_SDK_PATH}/Lib/shaderc_combined.lib
 )
